# rclip

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  Pipfile  pyproject.toml
rclip/: __init__.py  __main__.py  config.py  db.py  model.py  rclip.py  utils.py
