[tool.poetry]
name = "rclip"
version = "0.1.0"
description = ""
authors = ["Gordon Hart <gordon.hart2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
clip = { git = "git@github.com:openai/CLIP.git", branch = "main" }
torch = "1.9.0"
torchvision = "0.10.0"
Pillow = ">=8.3.2"
tqdm = "^4.62.2"
ftfy = "^6.0.3"
regex = "^2021.8.28"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
